--- a/Kitodo/src/main/webapp/pages/incMeta/addMetadataGroup.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/addMetadataGroup.xhtml
@@ -100,9 +100,9 @@
             <tr>
                 <td class="eingabeBoxen_row3" colspan="3">
                     <h:commandButton action="#{Metadaten.showMetadata}"
-                                     value="#{msgs.abbrechen}"/>
+                                     value="#{msgs.cancel}"/>
                     <h:commandButton action="#{Metadaten.addMetadataGroup}"
-                                     value="#{msgs.speichern}"/>
+                                     value="#{msgs.save}"/>
                 </td>
             </tr>
         </table>
