--- a/Kitodo/src/main/webapp/pages/incMeta/metadataCenter.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadataCenter.xhtml
@@ -23,7 +23,7 @@
         <p:tab title="#{msgs.pagination}">
             <ui:include src="pagination.xhtml"/>
         </p:tab>
-        <p:tab title="#{msgs.strukturdaten}">
+        <p:tab title="#{msgs.structureData}">
             <ui:include src="structureData.xhtml"/>
         </p:tab>
         <p:tab title="#{msgs.metadata}">
