--- a/Kitodo/src/main/webapp/pages/incMeta/pagination.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/pagination.xhtml
@@ -19,7 +19,7 @@
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:p="http://primefaces.org/ui">
     <h:form id="pagination">
-        <p:commandLink action="#{Metadaten.createPagination}" value="#{msgs.paginierungEinlesen}"
+        <p:commandLink action="#{Metadaten.createPagination}" value="#{msgs.paginationRead}"
                        update="paginationTab" immediate="true">
         </p:commandLink>
 
