--- a/Kitodo/src/main/webapp/pages/indexingPage.xhtml
+++ b/Kitodo/src/main/webapp/pages/indexingPage.xhtml
@@ -150,7 +150,7 @@
         </p:tabView>
     </ui:define>
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
+        <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
         <li><a href="">#{msgs.indexing}</a></li>
     </ui:define>
 </ui:composition>
