--- a/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
+++ b/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
@@ -37,8 +37,8 @@
         </p:panel>
     </ui:define>
     <ui:define name="breadcrumbs">
-            <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
-            <li><h:link value="#{msgs.prozesse}" outcome="processes"/></li>
+            <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
+            <li><h:link value="#{msgs.processes}" outcome="processes"/></li>
             <li><a href="">#{msgs.metadatenBearbeiten}</a></li>
     </ui:define>
 </ui:composition>
