--- a/Kitodo/src/main/webapp/pages/modules.xhtml
+++ b/Kitodo/src/main/webapp/pages/modules.xhtml
@@ -29,13 +29,13 @@
                     <p:column headerText="#{msgs.titel}">
                         <h:outputText value="#{item.name}"/>
                     </p:column>
-                    <p:column headerText="#{msgs.fortschritt}">
+                    <p:column headerText="#{msgs.progress}">
                         <h:outputText value="#{item.progress}"/>
                     </p:column>
                     <p:column headerText="#{msgs.status}">
                         <h:outputText value="#{item.stateDescription}"/>
                     </p:column>
-                    <p:column headerText="#{msgs.auswahl}" styleClass="actionsColumn">
+                    <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
                         <!-- move up -->
                         <p:commandLink action="#{LongRunningTasksForm.moveTaskUp}"
                                        title="#{msgs.start}">
@@ -68,7 +68,7 @@
                         </p:commandLink>
                         <!-- delete -->
                         <p:commandLink action="#{LongRunningTasksForm.removeTask}"
-                                       title="#{msgs.loeschen}">
+                                       title="#{msgs.delete}">
                             <i class="fa fa-trash-o fa-lg"/>
                             <f:setPropertyActionListener target="#{LongRunningTasksForm.task}"
                                                          value="#{item}"/>
@@ -80,7 +80,7 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
+        <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
         <li><a href="">#{msgs.modules}</a></li>
     </ui:define>
 </ui:composition>
