--- a/Kitodo/src/main/webapp/pages/processFromTemplate.xhtml
+++ b/Kitodo/src/main/webapp/pages/processFromTemplate.xhtml
@@ -27,18 +27,18 @@
             <h:outputText value="#{msgs.einenNeuenProzessAnlegen} (#{msgs.prozessvorlage}: '#{ProzesskopieForm.template.title}')"/>
         </h3>
         <p:commandButton id="saveButton"
-                         value="#{msgs.speichern}"
+                         value="#{msgs.save}"
                          action="#{ProzesskopieForm.createNewProcess}"
                          icon="fa fa-floppy-o fa-lg" iconPos="right"
                          onclick="PF('notifications').renderMessage({'summary':'#{msgs.validatingData}','detail':'','severity':'info'});"
                          oncomplete="if (args &amp;&amp; !args.validationFailed) PF('sticky-notifications').renderMessage({'summary':'#{msgs.processSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
                          update="notifications, sticky-notifications"/>
-        <p:button value="#{msgs.abbrechen}" outcome="projects" icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
+        <p:button value="#{msgs.cancel}" outcome="projects" icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
     </ui:define>
 
     <ui:define name="pageTabView">
         <p:tabView id="processFromTemplateTabView" activeIndex="#{ProzesskopieForm.activeTabId}">
-            <p:tab id="processDataTab" title="#{msgs.prozessdaten}">
+            <p:tab id="processDataTab" title="#{msgs.processData}">
                 <ui:include src="/WEB-INF/templates/includes/processFromTemplate/processDataEdit.xhtml" />
             </p:tab>
             <p:tab id="additionalDetailsTab" title="#{msgs.zusaetzlicheDetails}">
@@ -55,10 +55,10 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
-        <li><h:link value="#{msgs.projekte}" outcome="projects"/></li>
+        <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
+        <li><h:link value="#{msgs.projects}" outcome="projects"/></li>
         <ui:fragment rendered="#{not empty ProzessverwaltungForm.process.title}">
-            <li><a href="">#{msgs.prozessBearbeiten}</a></li>
+            <li><a href="">#{msgs.processEdit}</a></li>
         </ui:fragment>
         <ui:fragment rendered="#{empty ProzessverwaltungForm.process.title}">
             <li><a href="">#{msgs.createNewProcessFromTemplate}</a></li>
