--- a/Kitodo/src/main/webapp/pages/processes.xhtml
+++ b/Kitodo/src/main/webapp/pages/processes.xhtml
@@ -19,7 +19,7 @@
 
     <ui:define name="contentHeader">
         <h:outputScript name="js/filter.js" target="body" />
-            <h3>#{msgs.prozessverwaltung}</h3>
+            <h3>#{msgs.processManagement}</h3>
             <h:form id="addForm">
                 <p:menuButton value="#{msgs.newElement}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green">
                     <p:menuitem value="#{msgs.newProcess}" action="#{ProzessverwaltungForm.newProcess}"
@@ -72,7 +72,7 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
-        <li><a href="">#{msgs.prozesse}</a></li>
+        <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
+        <li><a href="">#{msgs.processes}</a></li>
     </ui:define>
 </ui:composition>
