--- a/Kitodo/src/main/webapp/pages/projectEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEdit.xhtml
@@ -28,13 +28,13 @@
             window.onload = function () {checkForm('editForm')};
         </script>
         <h3>
-            <h:outputText value="#{msgs.projektBearbeiten} (#{ProjekteForm.myProjekt.title})" rendered="#{not empty ProjekteForm.myProjekt.title}"/>
+            <h:outputText value="#{msgs.projectEdit} (#{ProjekteForm.myProjekt.title})" rendered="#{not empty ProjekteForm.myProjekt.title}"/>
             <h:outputText value="#{msgs.newProject}" rendered="#{empty ProjekteForm.myProjekt.projectFileGroups}"/>
             <h:outputText value="#{msgs.duplicateProject}" rendered="#{empty ProjekteForm.myProjekt.title and not empty ProjekteForm.myProjekt.projectFileGroups}"/>
         </h3>
         <p:commandButton id="save"
                          widgetVar="save"
-                         value="#{msgs.speichern}"
+                         value="#{msgs.save}"
                          action="#{ProjekteForm.save()}"
                          icon="fa fa-floppy-o fa-lg"
                          iconPos="right"
@@ -45,7 +45,7 @@
                          actionListener="#{ProjekteForm.setSaveDisabled(false)}"
                          update="save"
                          style="display:none;"/>
-        <p:button value="#{msgs.abbrechen}" outcome="projects" icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
+        <p:button value="#{msgs.cancel}" outcome="projects" icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
     </ui:define>
 
     <ui:define name="pageTabView">
@@ -63,12 +63,12 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
-        <li><h:link value="#{msgs.projekte}" outcome="projects"/></li>
+        <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
+        <li><h:link value="#{msgs.projects}" outcome="projects"/></li>
         <li>
             <a href="">
                 <ui:fragment rendered="#{not empty ProjekteForm.myProjekt.title}">
-                    #{msgs.projektBearbeiten}
+                    #{msgs.projectEdit}
                 </ui:fragment>
                 <ui:fragment rendered="#{empty ProjekteForm.myProjekt.projectFileGroups}">
                     #{msgs.newProject}
