--- a/Kitodo/src/main/webapp/pages/searchProcess.xhtml
+++ b/Kitodo/src/main/webapp/pages/searchProcess.xhtml
@@ -193,8 +193,8 @@
         </p:tabView>
     </ui:define>
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
-        <li><h:link value="#{msgs.prozesse}" outcome="processes"/> </li>
+        <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
+        <li><h:link value="#{msgs.processes}" outcome="processes"/> </li>
         <li><a href="">#{msgs.extendedSearch}</a></li>
     </ui:define>
 </ui:composition>
