--- a/Kitodo/src/main/webapp/pages/taskEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/taskEdit.xhtml
@@ -33,7 +33,7 @@
             <h:outputText value="#{msgs.schrittDetails} (#{ProzessverwaltungForm.task.title})"
                           rendered="#{not empty ProzessverwaltungForm.task.title}"/>
         </h3>
-        <p:commandButton id="save" value="#{msgs.speichern}"
+        <p:commandButton id="save" value="#{msgs.save}"
                          action="#{ProzessverwaltungForm.saveTaskAndRedirect}"
                          icon="fa fa-floppy-o fa-lg"
                          iconPos="right"
@@ -44,7 +44,7 @@
                          actionListener="#{ProzessverwaltungForm.setSaveDisabled(false)}"
                          update="save"
                          style="display:none;"/>
-        <p:button id="cancel" value="#{msgs.abbrechen}" outcome="processEdit?id=#{ProzessverwaltungForm.process.id}"
+        <p:button id="cancel" value="#{msgs.cancel}" outcome="processEdit?id=#{ProzessverwaltungForm.process.id}"
                   icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
     </ui:define>
 
@@ -53,10 +53,10 @@
             <p:tab title="#{msgs.details}">
                 <ui:include src="/WEB-INF/templates/includes/taskEdit/taskEditDetails.xhtml"/>
             </p:tab>
-            <p:tab title="#{msgs.benutzer}">
+            <p:tab title="#{msgs.user}">
                 <ui:include src="/WEB-INF/templates/includes/taskEdit/taskEditUsers.xhtml"/>
             </p:tab>
-            <p:tab title="#{msgs.benutzergruppen}">
+            <p:tab title="#{msgs.userGroup}">
                 <ui:include src="/WEB-INF/templates/includes/taskEdit/taskEditUsergroups.xhtml"/>
             </p:tab>
         </p:tabView>
@@ -68,9 +68,9 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
-        <li><h:link value="#{msgs.prozesse}" outcome="processes"/></li>
-        <li><h:link value="#{msgs.prozessBearbeiten}" outcome="processEdit?id=#{ProzessverwaltungForm.process.id}"/></li>
+        <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
+        <li><h:link value="#{msgs.processes}" outcome="processes"/></li>
+        <li><h:link value="#{msgs.processEdit}" outcome="processEdit?id=#{ProzessverwaltungForm.process.id}"/></li>
         <li><a href="">#{msgs.schrittDetails}</a></li>
     </ui:define>
 </ui:composition>
