--- a/Kitodo/src/main/webapp/pages/taskTemplateEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/taskTemplateEdit.xhtml
@@ -33,7 +33,7 @@
             <h:outputText value="#{msgs.schrittDetails} (#{TemplateForm.task.title})"
                           rendered="#{not empty TemplateForm.task.title}"/>
         </h3>
-        <p:commandButton id="save" value="#{msgs.speichern}"
+        <p:commandButton id="save" value="#{msgs.save}"
                          action="#{TemplateForm.saveTaskAndRedirect}"
                          icon="fa fa-floppy-o fa-lg"
                          iconPos="right"
@@ -44,7 +44,7 @@
                          actionListener="#{TemplateForm.setSaveDisabled(false)}"
                          update="save"
                          style="display:none;"/>
-        <p:button id="cancel" value="#{msgs.abbrechen}" outcome="templateEdit?id=#{TemplateForm.template.id}"
+        <p:button id="cancel" value="#{msgs.cancel}" outcome="templateEdit?id=#{TemplateForm.template.id}"
                   icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
     </ui:define>
 
@@ -53,10 +53,10 @@
             <p:tab title="#{msgs.details}">
                 <ui:include src="/WEB-INF/templates/includes/taskTemplateEdit/taskEditDetails.xhtml"/>
             </p:tab>
-            <p:tab title="#{msgs.benutzer}">
+            <p:tab title="#{msgs.user}">
                 <ui:include src="/WEB-INF/templates/includes/taskTemplateEdit/taskEditUsers.xhtml"/>
             </p:tab>
-            <p:tab title="#{msgs.benutzergruppen}">
+            <p:tab title="#{msgs.userGroup}">
                 <ui:include src="/WEB-INF/templates/includes/taskTemplateEdit/taskEditUsergroups.xhtml"/>
             </p:tab>
         </p:tabView>
@@ -68,7 +68,7 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
+        <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
         <li><h:link value="#{msgs.prozessvorlage}" outcome="projects"/></li>
         <li><h:link value="#{msgs.editTemplate}" outcome="templateEdit?id=#{TemplateForm.template.id}"/></li>
         <li><a href="">#{msgs.schrittDetails}</a></li>
