--- a/Kitodo/src/main/webapp/pages/templateEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/templateEdit.xhtml
@@ -33,7 +33,7 @@
         </h3>
         <p:commandButton id="save"
                          widgetVar="save"
-                         value="#{msgs.speichern}"
+                         value="#{msgs.save}"
                          action="#{TemplateForm.saveAndRedirect}"
                          icon="fa fa-floppy-o fa-lg"
                          iconPos="right"
@@ -44,7 +44,7 @@
                          actionListener="#{TemplateForm.setSaveDisabled(false)}"
                          update="save"
                          style="display:none;"/>
-        <p:button id="cancel" value="#{msgs.abbrechen}"
+        <p:button id="cancel" value="#{msgs.cancel}"
                   outcome="#{'projects'}"
                   icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
     </ui:define>
@@ -61,8 +61,8 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
-        <li><h:link value="#{msgs.projekte}" outcome="projects"/></li>
+        <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
+        <li><h:link value="#{msgs.projects}" outcome="projects"/></li>
         <li><a href="">#{msgs.editTemplate}</a></li>
     </ui:define>
 </ui:composition>
